--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Miles Herr, Tenor
 ---
 <div class="blurb">
 	<h1>Miles Herr, Tenor</h1>
