--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Miles Herr, Tenor
 ---
 <div class="blurb">
-	<h1>I TENOR, BEST TENOR ALL THE LAND</h1>
-	<p><em>Lenox, MA</em></p>
+	<h1>Miles Herr, Tenor</h1>
+	<!--<p><em>Lenox, MA</em></p>-->
 </div><!-- /.blurb -->
