--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Miles Herr, Tenor
 	<h1>Miles Herr, Tenor</h1>
 	<!--<p><em>Lenox, MA</em></p>-->
 	<p>
-		<img src="https://github.com/leemlb06pmi/leemlb06pmi.github.io/blob/master/photos/Miles%20Herr%20Headshot.jpg" alt="Headshot">
+		<img src="https:leemlb06pmi.github.io/photos/Miles%Herr%Headshot.jpg" alt="Headshot">
 		<br>
 		" Photo by Laura Toraldo"
 	</p>
