--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ title: Miles Herr, Tenor
 	<h1>Miles Herr, Tenor</h1>
 	<!--<p><em>Lenox, MA</em></p>-->
 	<p>
-		<img src="https://leemlb06pmi.github.io/photos/Cradle_1.jpg" alt="Headshot">
+		<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 		<br>
 		" 
-		Updated
+		Laura Toraldo Photography
 		"
 	</p>
 </div><!-- /.blurb -->
