--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@ title: Miles Herr, Tenor
 	<p>
 		<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 		<br>
-		" 
-		Laura Toraldo Photography
-		"
+		Photograph by Laura Toraldo
 	</p>
 </div><!-- /.blurb -->
