--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Miles Herr, Tenor
 	<h1>Miles Herr, Tenor</h1>
 	<!--<p><em>Lenox, MA</em></p>-->
 	<p>
-		<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+		<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" class = "sized" alt="Headshot">
 		<br>
 		Photograph by Laura Toraldo
 	</p>
