--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@ title: Miles Herr, Tenor
 	<p>
 		<img src="https://leemlb06pmi.github.io/photos/Cradle_2.jpg" alt="Headshot">
 		<br>
-		Testing
+		More Testing
 	</p>
 </div><!-- /.blurb -->
