--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Miles Herr, Tenor
 	<h1>Miles Herr, Tenor</h1>
 	<!--<p><em>Lenox, MA</em></p>-->
 	<p>
-		<img src="https://leemlb06pmi.github.io/photos/Cradle_2.jpg" alt="Headshot">
+		<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 		<br>
-		More Testing
+		photo by Laura Toraldo
 	</p>
 </div><!-- /.blurb -->
