--- a/media/index.html
+++ b/media/index.html
@@ -4,7 +4,5 @@ title: Media
 ---
 <h1>{{ page.title }}</h1>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Cradle_1.jpg" alt="Stevie">
-	<br>
-	Stevie in Blitzstein's <em> The Cradle Will Rock </em><br>Opera Saratoga 2017, photo by Gary David Gold
+	Coming Soon!
 </p>
