--- a/pictures/index.html
+++ b/pictures/index.html
@@ -4,26 +4,26 @@ title: Photos
 ---
 <h1>{{ page.title }}</h1>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Cosi_hr_flip.jpg" alt="Stevie">
+	<img src="https://leemlb06pmi.github.io/photos/Cosi_hr_flip.jpg" alt="Ferrando_1">
 	<br>
 	Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019
 </p>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Cosi_2.jpg" alt="Stevie">
+	<img src="https://leemlb06pmi.github.io/photos/Cosi_2.jpg" alt="Ferrando_2">
 	<br>
 </p>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Orpheus_1.jpg" alt="Stevie">
+	<img src="https://leemlb06pmi.github.io/photos/Orpheus_1_GeoffSheil.jpg" alt="Pluton">
 	<br>
 	Pluton in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil
 </p>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Orpheus_2.jpg" alt="Stevie">
+	<img src="https://leemlb06pmi.github.io/photos/Orpheus_2_GeoffSheil.jpg" alt="Orph&#233e">
 	<br>
 	Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil
 </p>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Lucretia_1.jpg" alt="Stevie">
+	<img src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpg" alt="Male Chorus">
 	<br>
 	Male Chorus in Britten's <em>The Rape of Lucretia </em><br>Maryland Opera Studio 2016, photo by Geoff Sheil
 </p>
