--- a/pictures/index.html
+++ b/pictures/index.html
@@ -18,7 +18,7 @@ title: Photos
 	Pluton in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil
 </p>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Orpheus_2_GeoffSheil.jpg" alt="Orph&#233e">
+	<img src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpg" alt="Orph&#233e">
 	<br>
 	Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil
 </p>
@@ -28,5 +28,5 @@ title: Photos
 	Male Chorus in Britten's <em>The Rape of Lucretia </em><br>Maryland Opera Studio 2016, photo by Geoff Sheil
 </p>
 <p> 
-	<img src="https://leemlb06pmi.github.io/photos/Lucretia_2.jpg" alt="Stevie">
+	<img src="https://leemlb06pmi.github.io/photos/Lucretia_2_GeoffSheil.jpg" alt="Male Chorus">
 </p>
