--- a/contact/index.html
+++ b/contact/index.html
@@ -7,5 +7,6 @@ title: Contact Me
 <p>Please feel free to drop me a <a href="mailto:miles@finexus.com">line</a>!
 <br>
 <img src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" alt="headshot-2">
+Photo by Laura Toraldo
 </p>
 
