--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,8 @@ title: Contact Me
 <h1>{{ page.title }}</h1>
 <p>Please feel free to drop me a <a href="mailto:miles@finexus.com">line</a>!
 <br>
-<img src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" alt="headshot-2">
-Photo by Laura Toraldo
+<img src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" class="sized" alt="headshot-2">
+<br>
+Photo by sized
 </p>
 
