--- a/contact/index.html
+++ b/contact/index.html
@@ -8,6 +8,6 @@ title: Contact Me
 <br>
 <img src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" class="sized" alt="headshot-2">
 <br>
-Photo by sized
+Photo by sized again
 </p>
 
