--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@ title: Miles Herr, Tenor
 		<br>
 		photo by Laura Toraldo
 	</p>
-		<h2>Upcoming Engagements</h2>
+<blockquote>
+<h1 style="text-align:left">Upcoming Engagements</h1>
+</blockquote>
 </div><!-- /.blurb -->
