--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ title: Miles Herr, Tenor
 		photo by Laura Toraldo
 	</p>
 <blockquote>
-<h1 style="text-align:left">Upcoming Engagements</h1>
+<h1 style="text-align:left; font-size:1.75em;">Upcoming Engagements</h1>
 </blockquote>
 </div><!-- /.blurb -->
