--- a/index.html
+++ b/index.html
@@ -10,7 +10,5 @@ title: Miles Herr, Tenor
 		<br>
 		photo by Laura Toraldo
 	</p>
-<blockquote>
-<h1 style="text-align:left; font-size:1.75em;">Upcoming Engagements</h1>
-</blockquote>
+<h1 style="text-align:left; font-size:1.75em; margin-left:40px;">Upcoming Engagements</h1>
 </div><!-- /.blurb -->
