--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@ title: Miles Herr, Tenor
 		<br>
 		photo by Laura Toraldo
 	</p>
-<h1 style="text-align:left; font-size:1.75em; margin-left:40px;">Upcoming Engagements</h1>
+<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
+	<blockquote>This summer Mr. Herr will be joining the Teatro Nuovo as a Young Artist where he will be covering the role of Giannetto in <em>La gazza ladra</em>.
 </div><!-- /.blurb -->
