--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@ title: Miles Herr, Tenor
 		photo by Laura Toraldo
 	</p>
 <h1 style="font-size:1.75em;">Upcoming Engagements</h1>
-	<blockquote>This summer Mr. Herr will be joining the Teatro Nuovo as a Young Artist where he will be covering the role of Giannetto in <em>La gazza ladra</em>.
+	<blockquote>This summer, Mr. Herr will be joining the Teatro Nuovo as a Young Artist where he will be covering the role of Giannetto in <em>La gazza ladra</em>.
 </div><!-- /.blurb -->
