--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Miles Herr, Tenor
 ---
 <div class="blurb">
-	<h1 style="font-size:5em;">Miles Herr, Tenores</h1>
+	<h1>Miles Herr, Tenores</h1>
 	<!--<p><em>Lenox, MA</em></p>-->
 	<p>
 		<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
