--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Miles Herr, Tenor
 	</p>
 <blockquote>	
 <h1 style="font-size:1.75em;">Upcoming Engagements</h1>
-<p style="text-align:center;">This summer, Mr. Herr will be joining the Teatro Nuovo as a Young Artist where he 
-	will be covering the role of Giannetto in <em>La gazza ladra</em>.</p>
+<p style="text-align:center;">This summer, Mr. Herr will be joining Teatro Nuovo as a Young Artist where he 
+	will be covering the role of Giannetto in Rossini’s <em>La gazza ladra</em>.</p>
 </blockquote>
 </div><!-- /.blurb -->
