--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: Miles Herr, Tenor
 	</p>
 <blockquote>	
 <h1 style="font-size:1.75em;">Upcoming Engagements</h1>
-<p style="text-align:center;">This summer, Mr. Herr will be joining Teatro Nuovo as a Young Artist where he 
-	will be covering the role of Giannetto in Rossini’s <em>La gazza ladra</em>.</p>
+<p style="text-align:center;">This spring, Mr. Herr will be Opera Delaware where he will be singing the roles of Soldato
+	and Lucao in Monteverdi's <em>L'incoronazione di Poppea</em> and covering the role of the four servants in
+	Offenbach's <em>The Tales of Hoffmann</em>.</p>
 </blockquote>
 </div><!-- /.blurb -->
