--- a/media/index.html
+++ b/media/index.html
@@ -4,5 +4,7 @@ title: Media
 ---
 <h1>{{ page.title }}</h1>
 <p> 
-	Coming Soon!
+	<iframe width="420" height="315"
+	src="https://www.youtube.com/embed/3UgEQ_PCrw8">
+	</iframe>
 </p>
