--- a/media/index.html
+++ b/media/index.html
@@ -5,6 +5,11 @@ title: Media
 <h1>{{ page.title }}</h1>
 <p> 
 	<iframe width="853" height="505"
-	src="https://www.youtube.com/embed/3UgEQ_PCrw8">
+	src="https://www.youtube.com/embed/dthtCaZ8sTo">
 	</iframe>
+	<br>
+	<br>
+	<iframe width="853" height="505"
+        src="https://www.youtube.com/embed/kMDyoxD0XmM">
+        </iframe>
 </p>
