vids and updates

--- a/media/index.html
+++ b/media/index.html
@@ -12,4 +12,14 @@ title: Media
 	<iframe width="853" height="505"
         src="https://www.youtube.com/embed/kMDyoxD0XmM">
         </iframe>
+	<br>
+	<br>
+        <iframe width="853" height="505"
+        src="https://www.youtube.com/embed/Vq0419yL7os">
+        </iframe>
+	<br>
+	<br>
+	<iframe width="853" height="505"
+        src="https://www.youtube.com/embed/qskcaE4iMdk">
+        </iframe>
 </p>
