--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@ title: Miles Herr, Tenor
 	</p>
 <blockquote>	
 <h1 style="font-size:1.75em;">Upcoming Engagements</h1>
-<p style="text-align:center;">This spring, Mr. Herr will be joining Opera Delaware where he will be singing the roles of Soldato
-	and Lucano in Monteverdi's <em>L'incoronazione di Poppea</em> and covering the role of the four servants in
-	Offenbach's <em>The Tales of Hoffmann</em>.</p>
+<p style="text-align:center;">Mr. Herr is currently  waiting (as are we all) for the situation with COVID-19 to resolve to the point where live performance is once again an option>.</p>
 </blockquote>
 </div><!-- /.blurb -->
