myriad  sizes etc

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@ title: Contact Me
 ---
 
 <h1>{{ page.title }}</h1>
-<p>Please feel free to drop me a <a href="mailto:miles@finexus.com">line</a>!
+<p>Please feel free to drop me a <a href="mailto:miles@finexus.com" style="font-size:1em;">line</a>!
 <br>
 <img src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" alt="headshot-2">
 <br>
