--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ title: Miles Herr, Tenor
 	</p>
 <blockquote>	
 <h1 style="font-size:1.75em;">Upcoming Engagements</h1>
-<p style="text-align:center;">Mr. Herr is currently  waiting (as are we all) for the situation with COVID-19 to resolve to the point where live performance is once again an option.</p>
+<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
 </blockquote>
 </div><!-- /.blurb -->
