--- a/media/index.html
+++ b/media/index.html
@@ -5,21 +5,21 @@ title: Media
 <h1>{{ page.title }}</h1>
 <p> 
 	<iframe width="853" height="505"
-	src="https://www.youtube.com/embed/dthtCaZ8sTo">
+	src="https://youtu.be/2kdiS47tjLE">
 	</iframe>
 	<br>
 	<br>
 	<iframe width="853" height="505"
-        src="https://www.youtube.com/embed/kMDyoxD0XmM">
+        src="https://youtu.be/TJJt71NNE0Y">
         </iframe>
 	<br>
 	<br>
         <iframe width="853" height="505"
-        src="https://www.youtube.com/embed/Vq0419yL7os">
+        src="https://youtu.be/sZwNruPDyF8">
         </iframe>
 	<br>
 	<br>
 	<iframe width="853" height="505"
-        src="https://www.youtube.com/embed/qskcaE4iMdk">
+        src="https://youtu.be/sVXnwRW-xZs">
         </iframe>
 </p>
