--- a/media/index.html
+++ b/media/index.html
@@ -4,22 +4,26 @@ title: Media
 ---
 <h1>{{ page.title }}</h1>
 <p> 
-	<iframe width="853" height="505"
-	src="https://youtu.be/2kdiS47tjLE">
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/2kdiS47tjLE" 
+		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 	</iframe>
 	<br>
 	<br>
-	<iframe width="853" height="505"
-        src="https://youtu.be/TJJt71NNE0Y">
-        </iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/TJJt71NNE0Y" 
+		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+	</iframe>
 	<br>
 	<br>
-        <iframe width="853" height="505"
-        src="https://youtu.be/sZwNruPDyF8">
-        </iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/sZwNruPDyF8" 
+		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+	</iframe>
 	<br>
 	<br>
-	<iframe width="853" height="505"
-        src="https://youtu.be/sVXnwRW-xZs">
-        </iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/sVXnwRW-xZs" 
+		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+	</iframe>
 </p>
