--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@ title: Miles Herr, Tenor
 <div class="blurb">
 	<h1>Miles Herr, Tenor</h1>
 	<!--<p><em>Lenox, MA</em></p>-->
-	<p>
-		<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-		<br>
-		photo by Laura Toraldo
-	</p>
-<blockquote>	
-<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
-<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
-</blockquote>
+
+	<div class = "row">
+		<div class = "column">
+			<p>
+				<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+				<br>
+				photo by Laura Toraldo
+			</p>
+		</div>
+		<div class = "column">
+			<blockquote>	
+				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
+				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
+			</blockquote>
+		</div>
+	</div>
 </div><!-- /.blurb -->
