--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Miles Herr, Tenor
 	<div class = "row">
 		<div class = "column">
 			<p>
-				<img src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+				<img style="width: 80%;">src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 				<br>
 				photo by Laura Toraldo
 			</p>
