--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@ layout: default
 title: Miles Herr, Tenor
 ---
 <div class="blurb">
-	<h1>Miles Herr, Tenor</h1>
 	<!--<p><em>Lenox, MA</em></p>-->
 
 	<div class = "row">
 		<div class = "column">
 			<p>
-				<img style="width: 80%;">src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+				<img style="width: 100%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 				<br>
 				photo by Laura Toraldo
 			</p>
 		</div>
 		<div class = "column">
+			<h1>Miles Herr, Tenor</h1>
+			<br>
 			<blockquote>	
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
 				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
