--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@ title: Miles Herr, Tenor
 
 		</div>
 		<div class = "column">
+			<br>
 			<blockquote>	
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
 				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
 			</blockquote>
+			<br>
+			<!--<p>Something to go here.. like a review? or.. idk, anything?</p>-->
 		</div>
 	</div>
 </div><!-- /.blurb -->
