--- a/index.html
+++ b/index.html
@@ -9,11 +9,8 @@ title: Miles Herr, Tenor
 		<div class = "column">
 			<h1>Miles Herr, Tenor</h1>
 			<br>
-			<p>
-				<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-				<br>
-				photo by Laura Toraldo
-			</p>
+			<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+			<p style="text-align:left; font-size:.75em;">photo by Laura Toraldo</p>
 
 		</div>
 		<div class = "column">
