--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Miles Herr, Tenor
 			<p style="text-align:left; font-size:.75em;">photo by Laura Toraldo</p>
 
 		</div>
-		<div class = "column" style= "background-image:url("https://leemlb06pmi.github.io/photos/rock_backdrop.png");opacity:.2;">
+		<div class = "column" style= "background-image:url("https://leemlb06pmi.github.io/photos/rock_backdrop.jpg");opacity:.2;">
 			<br>
 			<blockquote>	
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
