--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@ title: Miles Herr, Tenor
 			<p style="text-align:left; font-size:.75em;">photo by Laura Toraldo</p>
 
 		</div>
-		<div class = "column" style= "background-image:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');">
+		<div class = "column" style= "background-image:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
+					      background-size:100%;
+					      opacity:.2;">
 			<br>
 			<blockquote>	
 				<h1 style="font-size:1.75em;">Upcoming Engagements, Hello!</h1>
