--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ title: Miles Herr, Tenor
 			<p style="text-align:left; font-size:.75em;">photo by Laura Toraldo</p>
 
 		</div>
-		<div class = "column" style= "background-image:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
-					      background-size:100%;
+		<div class = "column" style= "background:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg') no-repeat;
+					      background-size:cover;
 					      opacity:.2;">
 			<br>
 			<blockquote>	
