--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Miles Herr, Tenor
 
 		</div>
 		<div class = "column" style= "background:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg') no-repeat;
-					      background-size:cover;
+					      background-size:100%;
 					      opacity:.2;">
 			<br>
 			<blockquote>	
