--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@ title: Miles Herr, Tenor
 			<p style="text-align:left; font-size:.75em;">photo by Laura Toraldo</p>
 
 		</div>
-		<div class = "column" style= "background-image:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg') no-repeat;
+		<div class = "column" style= "background-image:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
 					      background-size:cover;
 					      bakckground-repeat:no-repeat;
 					      opacity:.2;">
 			<br>
 			<blockquote>	
-				<h1 style="font-size:1.75em;opacity:1;">Upcoming Engagements, Hello!</h1>
-				<p style="text-align:center;opacity:1;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
+				<h1 style="font-size:1.75em;">Upcoming Engagements, Hello!</h1>
+				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
 			</blockquote>
 			<br>
 			<!--<p>Something to go here.. like a review? or.. idk, anything?</p>-->
