--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@ title: Miles Herr, Tenor
 		</div>
 		<div class = "column" style= "background-image:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
 					      background-size:cover;
+					      width:100%;
+					      height:100%;
 					      bakckground-repeat:no-repeat;
 					      opacity:.2;">
 			<br>
-			<blockquote>	
+			<blockquote style="opacity:1;">	
 				<h1 style="font-size:1.75em;">Upcoming Engagements, Hello!</h1>
 				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
 			</blockquote>
