--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@ title: Miles Herr, Tenor
 	<!--<p><em>Lenox, MA</em></p>-->
 
 	<div class = "row">
-		<div class = "column">
+		<div class = "column left">
 			<h1>Miles Herr, Tenor</h1>
 			<br>
 			<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 			<p style="text-align:left; font-size:.75em;">photo by Laura Toraldo</p>
 
 		</div>
-		<div class = "column" style= "background-image:url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
-					      background-size:cover;
-					      bakckground-repeat:no-repeat;
-					      min-height:100%;">
+		<div class = "column right" >
 			<br>
 			<blockquote>	
 				<h1 style="font-size:1.75em;">Upcoming Engagements, Hello!</h1>
