--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Miles Herr, Tenor
 			<h1>Miles Herr, Tenor</h1>
 			<br>
 			<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-			<p style="text-align:left; font-size:.75em;">photo by Laura Toraldo</p>
+			<p style="text-align:left; font-size:1em;">photo by Laura Toraldo</p>
 
 		</div>
 		<div class = "column right" >
