--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@ title: Miles Herr, Tenor
 		<div class = "column right" >
 			<br>
 			<blockquote>	
-				<h1 style="font-size:1.75em;">Upcoming Engagements, Hello!</h1>
+				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
 				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
-			</blockquote>
 			<br>
-			<!--<p>Something to go here.. like a review? or.. idk, anything?</p>-->
+				<!--<p>Something to go here.. like a review? or.. idk, anything?</p>-->
+			</blockquote>
 		</div>
 	</div>
 </div><!-- /.blurb -->
