--- a/pictures/index.html
+++ b/pictures/index.html
@@ -3,30 +3,24 @@ layout: default
 title: Pictures
 ---
 <h1>{{ page.title }}</h1>
-<p> 
-	<img src="https://leemlb06pmi.github.io/photos/Cosi_hr_flip.jpg" alt="Ferrando_1">
-	<br>
+<p style="text-align:center;"> 
 	Ferrando in Mozart's <em>Cos&#236 fan tutte </em><br>Fargo-Moorhead Opera 2019
-</p>
-<p> 
-	<img src="https://leemlb06pmi.github.io/photos/Cosi_2.jpg" alt="Ferrando_2">
+	<img src="https://leemlb06pmi.github.io/photos/Cosi_hr_flip.jpeg" alt="Ferrando_1">
 	<br>
+	<img src="https://leemlb06pmi.github.io/photos/Cosi_2.jpeg" alt="Ferrando_2">
 </p>
-<p> 
-	<img src="https://leemlb06pmi.github.io/photos/Orpheus_1_GeoffSheil.jpg" alt="Pluton">
-	<br>
+
+<p style="text-align:center;"> 
 	Pluton in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil
-</p>
-<p> 
-	<img src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpg" alt="Orph&#233e">
+	<img src="https://leemlb06pmi.github.io/photos/Orpheus_1_GeoffSheil.jpeg" alt="Pluton">
 	<br>
 	Orph&#233e in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil
+	<img src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpeg" alt="Orph&#233e">
 </p>
-<p> 
-	<img src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpg" alt="Male Chorus">
-	<br>
+
+<p style="text-align:center;"> 
 	Male Chorus in Britten's <em>The Rape of Lucretia </em><br>Maryland Opera Studio 2016, photo by Geoff Sheil
-</p>
-<p> 
-	<img src="https://leemlb06pmi.github.io/photos/Lucretia_2_GeoffSheil.jpg" alt="Male Chorus">
+	<img src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Male Chorus">
+	<br>
+	<img src="https://leemlb06pmi.github.io/photos/Lucretia_2_GeoffSheil.jpeg" alt="Male Chorus"
 </p>
