--- a/pictures/index.html
+++ b/pictures/index.html
@@ -11,6 +11,11 @@ title: Pictures
 </p>
 
 <p style="text-align:center;"> 
+	Stevie in Blitzstein's <em> The Cradle Will Rock </em><br>Opera Saratoga 2017, photo by Gary David Gold
+	<img src="https://leemlb06pmi.github.io/photos/Cradle_1.jpg" alt="Stevie">
+</p>
+
+<p style="text-align:center;"> 
 	Pluton in Offenbach's <em>Orph&#233e aux enfers </em><br>Maryland Opera Studio 2017, photo by Geoff Sheil
 	<img src="https://leemlb06pmi.github.io/photos/Orpheus_1_GeoffSheil.jpeg" alt="Pluton">
 	<br>
