--- a/pictures/index.html
+++ b/pictures/index.html
@@ -12,7 +12,7 @@ title: Pictures
 
 <p style="text-align:center;"> 
 	Stevie in Blitzstein's <em> The Cradle Will Rock </em><br>Opera Saratoga 2017, photo by Gary David Gold
-	<img src="https://leemlb06pmi.github.io/photos/Cradle_1.jpg" alt="Stevie">
+	<img src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
 </p>
 
 <p style="text-align:center;"> 
