--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@ title: Contact Me
 <h1>{{ page.title }}</h1>
 <p>Please feel free to drop me a <a href="mailto:miles@finexus.com" style="font-size:1em;color:rgb(72,138,187);">line</a>!
 <br>
-<img src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" alt="headshot-2">
+<img style="width:50%;" src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" alt="headshot-2">
 <br>
 Photo by Laura Toraldo
 </p>
