--- a/pictures/index.html
+++ b/pictures/index.html
@@ -12,7 +12,7 @@ title: Pictures
 		<img style="max-width:95%; height:auto;" src="https://leemlb06pmi.github.io/photos/Cosi_2.jpeg" alt="Ferrando_2">
 		</p>
 
-		<p style="text-align:center;"> 
+		<p style="text-align:center; margin-top: 2.5%"> 
 		Stevie in Blitzstein's <em> The Cradle Will Rock </em><br>Opera Saratoga 2017, photo by Gary David Gold
 		<img style="max-width:95%; height:auto;" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
 		</p>
@@ -26,7 +26,7 @@ title: Pictures
 		<img style="max-width:95%; height:auto;" src="https://leemlb06pmi.github.io/photos/Orpheus_5_GeoffSheil.jpeg" alt="Orph&#233e">
 		</p>
 
-		<p style="text-align:center;"> 
+		<p style="text-align:center; margin-top: 2.5%"> 
 		Male Chorus in Britten's <em>The Rape of Lucretia </em><br>Maryland Opera Studio 2016, photo by Geoff Sheil
 		<img style="max-width:95%; height:auto;" src="https://leemlb06pmi.github.io/photos/Lucretia_1_GeoffSheil.jpeg" alt="Male Chorus">
 		<br>
