--- a/media/index.html
+++ b/media/index.html
@@ -3,27 +3,32 @@ layout: default
 title: Media
 ---
 <h1>{{ page.title }}</h1>
-<p> 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/2kdiS47tjLE" 
-		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-	</iframe>
-	<br>
-	<br>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/TJJt71NNE0Y" 
-		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-	</iframe>
-	<br>
-	<br>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/sZwNruPDyF8" 
-		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-	</iframe>
-	<br>
-	<br>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/sVXnwRW-xZs" 
-		title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-		clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-	</iframe>
-</p>
+<div class="row">
+	<div class="column">
+		<p> 
+			<iframe width="45%" height="auto" src="https://www.youtube.com/embed/2kdiS47tjLE" 
+			title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+			clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+			</iframe>
+			<br>
+			<iframe width="45%" height="auto" src="https://www.youtube.com/embed/TJJt71NNE0Y" 
+			title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+			clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+			</iframe>
+			<br>
+		</p>
+	</div>
+	<div class="column">
+		<p>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/sZwNruPDyF8" 
+			title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+			clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+			</iframe>
+			<br>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/sVXnwRW-xZs" 
+			title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+			clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+			</iframe>
+		</p>
+	</div>
+</div>
