--- a/media/index.html
+++ b/media/index.html
@@ -6,12 +6,12 @@ title: Media
 <div class="row">
 	<div class="column">
 		<p> 
-			<iframe width="45%" height="auto" src="https://www.youtube.com/embed/2kdiS47tjLE" 
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/2kdiS47tjLE" 
 			title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
 			clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 			</iframe>
 			<br>
-			<iframe width="45%" height="auto" src="https://www.youtube.com/embed/TJJt71NNE0Y" 
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/TJJt71NNE0Y" 
 			title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
 			clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 			</iframe>
