--- a/index.html
+++ b/index.html
@@ -2,25 +2,23 @@
 layout: default
 title: Miles Herr, Tenor
 ---
-<div class="blurb">
-	<!--<p><em>Lenox, MA</em></p>-->
+<h1>{{ page.title }}</h1>
 
-	<div class = "row">
-		<div class = "column left">
-			<h1>Miles Herr, Tenor</h1>
-			<br>
-			<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-			<p style="text-align:left; font-size:1em;">photo by Laura Toraldo</p>
+<div class = "row">
+	<div class = "column left">
+		<h1>Miles Herr, Tenor</h1>
+		<br>
+		<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+		<p style="text-align:left; font-size:1em;">photo by Laura Toraldo</p>
 
-		</div>
-		<div class = "column right" >
-			<br>
-			<blockquote>	
-				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
-				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
-			<br>
-				<!--<p>Something to go here.. like a review? or.. idk, anything?</p>-->
-			</blockquote>
-		</div>
 	</div>
-</div><!-- /.blurb -->
+	<div class = "column right" >
+		<br>
+		<blockquote>	
+			<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
+			<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
+		<br>
+			<!--<p>Something to go here.. like a review? or.. idk, anything?</p>-->
+		</blockquote>
+	</div>
+</div>
