--- a/contact/index.html
+++ b/contact/index.html
@@ -6,5 +6,5 @@ title: Contact Me
 <p>Please feel free to drop me a <a href="mailto:miles@finexus.com" style="font-size:1em;color:rgb(72,138,187);">line</a>!
 <br>
 <img style="width:50%;" src="https://leemlb06pmi.github.io/photos/Possible-3.jpg" alt="headshot-2"></p>
-<p style="text-align:left;font-size:.75em;">Photo by Laura Toraldo</p>
+<p style="text-align:center;font-size:.75em;">Photo by Laura Toraldo</p>
 
