--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Miles Herr, Tenor
 ---
 <div class = "row" style="background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg"); 
 				background-repeat: no-repeat;
-				filter: blur(4px);>
+				filter: blur(4px);">
 	<div class = "column left">
 		<h1>Miles Herr, Tenor</h1>
 		<br>
