--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 layout: default
 title: Miles Herr, Tenor
 ---
-<div class = "row" style="background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg"); 
-				background-repeat: no-repeat;
-				filter: blur(4px);">
+<div class = "row" style="background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg");">
 	<div class = "column left">
 		<h1>Miles Herr, Tenor</h1>
 		<br>
