--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Miles Herr, Tenor
 ---
 <div class = "back">
 	<div class = "row">
-		<div class = "column left" /*style="margin:0px; padding:0px;"*/>
+		<div class = "column left">
 			<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 			<p style="text-align:left; font-size:1em;">photo by Laura Toraldo</p>
 		</div>
