--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ title: Miles Herr, Tenor
 <div class = "back">
 	<div class = "row">
 		<div class = "column left">
-			<img style="width: 100%; border-radius: 15%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-			<p style="text-align:left; font-size:1em;">photo by Laura Toraldo</p>
+			<img style="width: 100%; border-radius: 0% 15% 15% 0%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+			<p style="text-align:left; font-size:1em; color:white;">photo by Laura Toraldo</p>
 		</div>
 		<div class = "column right" >
 			<h1>Miles Herr, Tenor</h1>
