--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@ title: Miles Herr, Tenor
 			<p style="text-align:left; font-size:1em; color:white;">photo by Laura Toraldo</p>
 		</div>
 		<div class = "column right" >
-			<h1>Miles Herr, Tenor</h1>
 			<br>
-			<blockquote>	
+			<blockquote style="background-color:rgba(170,149,166,.5);">	
+				<h1>Miles Herr, Tenor</h1>
+				<br>
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
 				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
 				<br>
