--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Miles Herr, Tenor
 		</div>
 		<div class = "column right" >
 			<br>
-			<blockquote style="background-color:rgba(170,149,166,.5);">	
+			<blockquote style="background-color:rgba(170,149,166,.5); margin:0px; padding:0px;">	
 				<h1>Miles Herr, Tenor</h1>
 				<br>
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
