--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ title: Miles Herr, Tenor
 			</blockquote>
 		</div>
 		<div class = "column left">
-			<img style="width: 100%; border-radius: 0% 15% 15% 0%;" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+			<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 			<p style="text-align:left; font-size:1em; color:white;">photo by Laura Toraldo</p>
 		</div>
 	</div>
