--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Miles Herr, Tenor
 <div class = "back">
 	<div class = "row">
 		<div class = "column right" >
-			<blockquote style="background-color:rgba(170,149,166,.5); margin:0px; padding:0px;">	
+			<blockquote class="home_oppo">	
 				<h1>Miles Herr, Tenor</h1>
 				<br>
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
