--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Miles Herr, Tenor
 	<div class = "row">
 		<div class = "column right" >
 			<blockquote class="home_oppo">	
-				<h1>Miles Herr, Tenor Hello!</h1>
+				<h1>Miles Herr, Tenor</h1>
 				<br>
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
 				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
