--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@ title: Miles Herr, Tenor
 				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
 				<p style="text-align:center;">Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</p>
 				<br>
-				<!--<p>Something to go here.. like a review? or.. idk, anything?</p>-->
 			</blockquote>
+			<div class="row">
+				<div class="column mini">
+				</div>
+				<div class="column mini">
+				</div>
+			</div>
 		</div>
 		<div class = "column left">
 			<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
