--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: Miles Herr, Tenor
 			</blockquote>
 			<div class="row">
 				<div class="column mini">
+					<a href="mailto:miles@finexus.com" class="button b1">Contact</a>	
 				</div>
 				<div class="column mini">
 				</div>
