--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ title: Miles Herr, Tenor
 					<a href="mailto:miles@finexus.com" class="button b1">Contact</a>	
 				</div>
 				<div class="column mini">
+					<button class="button b1">Dummy Button</button>
 				</div>
 			</div>
 		</div>
