--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ title: Miles Herr, Tenor
 				<div class="column mini">
 					<button class="button b2">Dummy Button</button>
 				</div>
+				<div class="column mini">
+					<button class="button b2">Dummy Button2</button>
+				</div>
 			</div>
 		</div>
 		<div class = "column left">
