--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ title: Miles Herr, Tenor
 			</blockquote>
 			<div class="row">
 				<div class="column mini">
-					<a href="mailto:miles@finexus.com" class="button b1">Contact</a>	
+					<a href="mailto:miles@finexus.com" class="button b1"><span>Contact</span></a>	
 				</div>
 				<div class="column mini">
-					<button class="button b2">Dummy Button</button>
+					<button class="button b2"><span>Dummy Button</span></button>
 				</div>
 				<div class="column mini">
-					<button class="button b2">Dummy Button2</button>
+					<button class="button b2"><span>Dummy Button2</span></button>
 				</div>
 			</div>
 		</div>
