--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Miles Herr, Tenor
 	<div class = "row">
 		<div class = "column right" >
 			<blockquote class="home_oppo">	
-				<h1 style="font-size:1.75em;">Upcoming Engagements</h1>
+				<h1>Upcoming Engagements</h1>
 				<span>Mr. Herr is excited to be returning to Fargo-Moorhead Opera where he will be debuting the role of Ramiro in their production of Rossini's <em> La Cenerentola</em>.</span>
 				<br>
 			</blockquote>
@@ -15,7 +15,7 @@ title: Miles Herr, Tenor
 					<a href="mailto:miles@finexus.com" class="button b1"><span>Contact</span></a>	
 				</div>
 				<div class="column mini">
-					<button class="button b2"><span>Dummy Button</span></button>
+					<a href="/photos/Miles Herr Resume.pdf" download class="button b2"><span>Resume</span></a>
 				</div>
 				<div class="column mini">
 					<button class="button b2"><span>Dummy Button2</span></button>
