--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Miles Herr, Tenor
 					<a href="/photos/Miles Herr Resume.pdf" download class="button b2"><span>Resume</span></a>
 				</div>
 				<div class="column mini">
-					<button class="button b3"><span>Dummy Button2</span></button>
+					<a href="https://www.youtube.com/channel/UCxxJHB4j4ZTPNabK6ZG3rFg" class="button b3"><span>Media</span></a>
 				</div>
 			</div>
 		</div>
