--- a/index.html
+++ b/index.html
@@ -26,4 +26,21 @@ title: Miles Herr, Tenor
 			<p style="text-align:left; font-size:1em; color:white;">photo by Laura Toraldo</p>
 		</div>
 	</div>
+	<div style="margin 2.5% 5% 2.5% 5%;">
+		<p style="text-align:left;margin:5% 5% 5%% 5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
+		His operatic credits include Ramiro (<em>La Cenerentola</em>), Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
+		Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
+		Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
+		Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
+		Lawn Opera. While a member of the Maryland Opera Studio, Mr. Herr took part in two consecutive iterations of the annual New 
+		Work Reading where he premiered two new operatic works: <em>The Young King</em> by Martin Hennessy and <em>Another Country</em> by Michael Oberhauser. 
+		</p>
+	<div class="row">
+		<div class="column mini">	
+		</div>
+		<div class="column mini">
+		</div>
+		<div class="column mini">
+		</div>
+	</div>
 </div>
