--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Miles Herr, Tenor
 		</div>
 	</div>
 	<div style="margin 2.5% 5% 2.5% 5%;">
-		<p style="text-align:left;margin:5% 5% 5%% 5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
+		<p style="text-align:left;margin:5% 5% 5% 5%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
 		His operatic credits include Ramiro (<em>La Cenerentola</em>), Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
 		Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 		Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
