--- a/index.html
+++ b/index.html
@@ -26,23 +26,26 @@ title: Miles Herr, Tenor
 			<p style="text-align:left; font-size:1em; color:white; margin-left:5%;">photo by Laura Toraldo</p>
 		</div>
 	</div>
-	<div class="row">
-		<div class="column 65left">
-			<div style="margin 2.5% 5% 2.5% 5%;background-color:rgba(20,45,70,.75);">
-				<p style="text-align:left;margin:5% 5% 5% 5%;padding:2.5% 0% 0% 0%;color:white;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
+	<div style="background-color:rgba(20,45,70,.75);">
+		<div class="row">
+			<div class="column 65left">
+				<div style="margin 2.5% 5% 2.5% 5%;">
+					<p style="text-align:left;margin:5% 5% 5% 5%;padding:2.5% 0% 0% 0%;color:white;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
 			His operatic credits include Ramiro (<em>La Cenerentola</em>), Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
 			Fargo-Moorhead Opera and Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 			Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
 			Male Chorus (<em>The Rape of Lucretia</em>) with the Marlyand Opera Studio, and Gastone (<em>La Traviata</em>) with Ash 
 			Lawn Opera. While a member of the Maryland Opera Studio, Mr. Herr took part in two consecutive iterations of the annual New 
 			Work Reading where he premiered two new operatic works: <em>The Young King</em> by Martin Hennessy and <em>Another Country</em> by Michael Oberhauser. 
-				</p>
+					</p>
+				</div>
 			</div>
-		</div>
-		<div class="column 35right">
-			<div style="margin-top: 2.5%">Stevie in Blitzstein's <em> The Cradle Will Rock </em>
-				<br>Opera Saratoga 2017, photo by Gary David Gold
-			<img style="max-width:90%; height:auto;" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
+			<div class="column 35right">
+				<div style="margin-top: 2.5%">
+					<img style="max-width:90%; height:auto;" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
+					<p style="color:white;margin-left:5%;">Stevie in Blitzstein's <em> The Cradle Will Rock </em>
+					<br>Opera Saratoga 2017, photo by Gary David Gold
+				</div>
 			</div>
 		</div>
 	</div>
