--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ title: Miles Herr, Tenor
 			</div>
 			<div class="column 35right">
 				<div style="margin-top: 2.5%">
-					<img style="max-width:90%; height:auto;" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
-					<p style="color:white;margin-left:5%;">Stevie in Blitzstein's <em> The Cradle Will Rock </em>
+					<img style="max-width:70%; height:auto;" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
+					<p style="color:white;margin-left:5%;font-size:1em;">Stevie in Blitzstein's <em> The Cradle Will Rock </em>
 					<br>Opera Saratoga 2017, photo by Gary David Gold
 				</div>
 			</div>
