--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@ title: Miles Herr, Tenor
 			</div>
 		</div>
 		<div class = "column left">
-			<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-			<p style="text-align:left; font-size:1em; color:white; margin-left:5%;">photo by Laura Toraldo</p>
+			<div class="picContain">
+				<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+				<div class="bottomLeft">photo by Laura Toraldo</div>
 		</div>
 	</div>
 	<div style="background-color:rgba(20,45,70,.75);">
