--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Miles Herr, Tenor
 		<div class = "column left">
 			<div class="picContain">
 				<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-				<div class="bottomLeft">photo by Laura Toraldo</div>
+				<div class="bottomCenter">photo by Laura Toraldo</div>
 		</div>
 	</div>
 	<div style="background-color:rgba(20,45,70,.75);">
