--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Miles Herr, Tenor
 		<div class = "column left">
 			<div class="picContain">
 				<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-				<div class="bottomCenter">photo by Laura Toraldo</div>
+				<div class="bottomCenterHead">photo by Laura Toraldo</div>
 		</div>
 	</div>
 	<div style="background-color:rgba(20,45,70,.75);">
@@ -43,9 +43,14 @@ title: Miles Herr, Tenor
 			</div>
 			<div class="column 35right">
 				<div style="margin-top: 2.5%">
-					<img style="max-width:70%; height:auto;" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
-					<p style="color:white;margin-left:5%;font-size:1em;">Stevie in Blitzstein's <em> The Cradle Will Rock </em>
-					<br>Opera Saratoga 2017, photo by Gary David Gold
+					<div class="picContainActive">
+						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
+						<div class="textLocate">
+							<p>Stevie in Blitzstein's <em>The Cradle Will Rock</em>
+							<br>Opera Saratoga 2017, photo by Gary David Gold
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
