--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ title: Miles Herr, Tenor
 				<div style="margin-top: 2.5%">
 					<div class="picContainActive">
 						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
-						<div class="textLocate">
-							<p>Stevie in Blitzstein's <em>The Cradle Will Rock</em>
+						<div class="textTrans">
+							<p style="color:white;">Stevie in Blitzstein's <em>The Cradle Will Rock</em>
 							<br>Opera Saratoga 2017, photo by Gary David Gold
 							</p>
 						</div>
