--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Miles Herr, Tenor
 				</div>
 			</div>
 			<div class="column 35right">
-				<div style="margin-top: 2.5%">
+				<div style="margin: 2.5% 0% 2.5% 0%;">
 					<div class="picContainActive">
 						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
 						<div class="textTrans">
