--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ title: Miles Herr, Tenor
 			<div class="picContain">
 				<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 				<div class="bottomCenterHead">photo by Laura Toraldo</div>
+			</div>
 		</div>
 	</div>
 	<div style="background-color:rgba(20,45,70,.75);">
