--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Miles Herr, Tenor
 			</div>
 		</div>
 	</div>
-	<div style="background-color:rgba(184,211,222,.75);">
+	<div>
 		<div class="row">
 			<div class="column 65left">
 				<div style="margin 2.5% 5% 2.5% 5%;">
