--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ title: Miles Herr, Tenor
 		<div class="row">
 			<div class="column 65left">
 				<div style="margin 2.5% 5% 2.5% 5%;">
-					<p style="text-align:left;margin:5% 5% 2.5% 5%;padding:2.5% 0% 0% 0%;color:rgb(20,45,70);">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
+					<p style="text-align:left;margin:5% 5% 2.5% 5%;padding:2.5% 0% 0% 0%;">Tenor Miles Herr, from Lenox, Massachusetts, is a graduate of the Maryland Opera Studio.  
 			His operatic credits include Ramiro (<em>La Cenerentola</em>), Ferrando (<em>Così fan tutte</em>), and Le Remendado (<em>Carmen</em>) with 
 			Fargo-Moorhead Opera, Bardolfo (<em>Falstaff</em>) with Crested Butte Music Festival, Stevie and Professor 
 			Scoot (<em>The Cradle will Rock</em>) with Opera Saratoga, Pluton and Orphée (<em>Orphée aux Enfers</em>), 
@@ -40,11 +40,11 @@ title: Miles Herr, Tenor
 			Lawn Opera. While a member of the Maryland Opera Studio, Mr. Herr took part in two consecutive iterations of the annual New 
 			Work Reading where he premiered two new operatic works: <em>The Young King</em> by Martin Hennessy and <em>Another Country</em> by Michael Oberhauser. 
 					</p>
-					<p style="text-align:left;margin:2.5% 5% 2.5% 5%;padding:0%;color:rgb(20,45,70);">As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, 
+					<p style="text-align:left;margin:2.5% 5% 2.5% 5%;padding:0%;">As a concert soloist, Mr. Herr has performed Handel’s Messiah with a number of groups, 
 						including Calvary Baptist Church (Washington, D.C.), The Cary Community Choir, and Chapel Hill University Baptist Church.  
 						He also performed a pair of concerts with the UNC Baroque Ensemble under the bow of Dr. Brent Wissick. 
 					</p>
-					<p style="text-align:left;margin:2.5% 5% 2.5% 5%;padding:0%;color:rgb(20,45,70);">Miles is an alumnus of young artist programs at 
+					<p style="text-align:left;margin:2.5% 5% 2.5% 5%;padding:0%;">Miles is an alumnus of young artist programs at 
 						Opera Delaware, Teatro Nuovo, Fargo-Moorhead Opera, Crested Butte Opera Studio, and Opera Saratoga. 
 						He has performed on master classes with many accomplished artists and teachers including Marlena Malas, 
 						Anthony Dean Griffey, and Angela Brown. Mr. Herr currently studies with Gran Wilson.
