--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@ title: Miles Herr, Tenor
 			<div class="column 35right">
 				<div style="margin: 2.5% 0% 2.5% 0%;">
 					<div class="picContainActive">
-						<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
-						<div class="textTrans">
-							<p style="color:white;">Stevie in Blitzstein's <em>The Cradle Will Rock</em>
-							<br>Opera Saratoga 2017, photo by Gary David Gold
-							</p>
-						</div>
+						<div class="shadowBox>
+							<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
+							<div class="textTrans">
+								<p style="color:white;">Stevie in Blitzstein's <em>The Cradle Will Rock</em>
+								<br>Opera Saratoga 2017, photo by Gary David Gold
+								</p>
+							</div>
+						</div>				       
 					</div>
 				</div>
 			</div>
