--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Miles Herr, Tenor
 						<div class="shadowBox">
 							<img class="imageFadeWText" src="https://leemlb06pmi.github.io/photos/Cradle_1.jpeg" alt="Stevie">
 							<div class="textTrans">
-								<p style="color:white;">Stevie in Blitzstein's <em>The Cradle Will Rock</em>
+								<p>Stevie in Blitzstein's <em>The Cradle Will Rock</em>
 								<br>
 								Opera Saratoga 2017, photo by Gary David Gold
 								</p>
