--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@ title: Miles Herr, Tenor
 		</div>
 		<div class = "column left">
 			<div class="picContain">
-				<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
-				<div class="bottomCenterHead">photo by Laura Toraldo</div>
+				<div class="shadowBox">
+					<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
+					<div class="bottomCenterHead">photo by Laura Toraldo</div>
+				</div>
 			</div>
 		</div>
 	</div>
