--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: Miles Herr, Tenor
 		</div>
 		<div class = "column left">
 			<div class="picContain">
-				<div class="shadowBox">
+				<div class="shadowBox" style="margin:5% 0% 0% 5%; border-radius:0% 10% 10% 0%;">
 					<img class="home" src="https://leemlb06pmi.github.io/photos/Headshot.jpg" alt="Headshot">
 					<div class="bottomCenterHead">photo by Laura Toraldo</div>
 				</div>
