--- a/index.html
+++ b/index.html
@@ -70,14 +70,23 @@ title: Miles Herr, Tenor
 			</div>
 		</div>
 	</div>
-	<!--	
-	<div class="row">
-		<div class="column mini">	
-		</div>
-		<div class="column mini">
-		</div>
-		<div class="column mini">
+	<div>
+		<div class="row">
+		   	<div class="column">
+				<div class="row">
+					<div class="column mini">
+						<p>col 1</p>
+					</div>
+					<div class="column mini">
+						<p> col 2</p>
+					</div>
+					<div class="column mini">
+						<p>col 3</p>
+					</div>
+				</div>
+			<div class="column">
+				<p>right side</p>
+			</div>
 		</div>
 	</div>
-	-->
 </div>
